--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<p class="texte">Votre objectif est de réussir à vous enfuir le plus rapidement possible. Mais, avant tout, veuillez choisir votre difficulté.</p>
 				<hr/>
 				<p class="choix bloc_996">Facile. Vous n'avez pas envie d'être limité par le temps.</p>
-				<p class="choix bloc_997">Normal. Le jeu a été conçu avec cette difficulté.</p>
+				<p class="choix bloc_997">Normal. Le jeu a été conçu pour cette difficulté.</p>
 				<p class="choix bloc_998">Difficile. Vous, vous êtes courageux !</p>
 			</div>
 			<!-- Fin choix difficulté -->
