--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</div>
 
 			<div class="contenu t_bloc_2">
-				<p class="texte">Vous vous levez de votre chaise pour examiner la salle. De la taille d'une chambre moyenne, ses murs sont fait d'un bois qui mériterait un bon ponçage. Le plancher est du même acabit et porte de nombreuses marques d'usage. La seule source de lumière provient d'une ampoule nue qui pend au plafond.</p>
+				<p class="texte">Vous vous levez de votre chaise pour examiner la salle. De la taille d'une chambre moyenne, ses murs sont faits d'un bois qui mériterait un bon ponçage. Le plancher est du même acabit et porte de nombreuses marques d'usage. La seule source de lumière provient d'une ampoule nue qui pend au plafond.</p>
 				<hr/>
 				<p class="choix bloc_1">S'asseoir.</p>
 				<p class="choix bloc_3">S'approcher de la fenêtre.</p>
@@ -112,7 +112,7 @@
 			</div>
 			
 			<div class="contenu t_bloc_4">
-				<p class="texte">Vous apercevez sur le seuil une large trace marron. Vous vous penchez pour mieux regarder... vous passez un index sur la tâche... c'est complètement sec. Est-ce que cela ne ressemblerait pas à du... sang séché ?</p>
+				<p class="texte">Vous apercevez sur le seuil une large trace marron. Vous vous penchez pour mieux regarder... vous passez un index sur la tache... c'est complètement sec. Est-ce que cela ne ressemblerait pas à du... sang séché ?</p>
 				<hr/>
 				<p class="choix bloc_1">S'asseoir.</p>
 				<p class="choix bloc_3">S'approcher de la fenêtre.</p>
@@ -123,7 +123,7 @@
 			<div class="contenu t_bloc_5">
 				<p class="texte">La poignée de la fenêtre pivote dans un grincement lugubre <i>*criiii*</i>. Vous décrochez les volets avant de les replier de chaque côté, les plaquant contre le mur avec un <i>*clac*</i> sonore. La fenêtre est protégée par des barreaux : impossible de passer par là. Le métal porte également des traces de griffes, comme si quelqu'un (ou quelque chose ?) avait tenté de forcer le passage.</p>
 				<p class="texte">Dehors, vous ne voyez pas à plus de dix mètres à cause de la brume. A la limite de votre champ de vision se trouve un énorme arbre solitaire, planté là sur l'herbe.</p>
-				<p class="texte">En vous tordant le coup vers la gauche, vous voyez le perron. Horreur ! Au-dessus du seuil de la porte se trouve une grande lame, attachée de manière à transpercer l'infortuné qui passerait sans précaution ! Un frisson vous agite <i>*brrr*</i> lorsque vous prenez conscience que vous auriez pu être cet infortuné...</p>
+				<p class="texte">En vous tordant le cou vers la gauche, vous voyez le perron. Horreur ! Au-dessus du seuil de la porte se trouve une grande lame, attachée de manière à transpercer l'infortuné qui passerait sans précaution ! Un frisson vous agite <i>*brrr*</i> lorsque vous prenez conscience que vous auriez pu être cet infortuné...</p>
 				<hr/>
 				<p class="choix bloc_3">Fermer la fenêtre.</p>
 			</div>
